# waitinglist-frontend

./: .gitignore
waitinglist-backend/: Dockerfile  README.md  pyproject.toml  railway.json
waitinglist-backend/src/: limiter.py  main.py
waitinglist-backend/src/database/: core.py
waitinglist-backend/src/models/: mail.py  sqlalchemy_models.py
waitinglist-backend/src/routes/: __init__.py  contact_routes.py
waitinglist-backend/src/services/: resend_mail_service.py  waitinglist_service.py
waitinglist/waitlist-website/app/: page.tsx
waitinglist/waitlist-website/components/: footer.tsx  hero.tsx  how-it-works.tsx  waitlist-form.tsx
waitinglist/waitlist-website/components/ui/: ruixen-bento-cards.tsx
waitlist-website/components/: footer.tsx
